corr using [[Project:AWB|AWB]]

--- a/Oldebroek.mw
+++ b/Oldebroek.mw
@@ -23,12 +23,12 @@
 Oldebroek grens an 't [[Overiessel]]se [[Kampen (Overiessel)|Kampen]] en an de previnsie [[Flevolaand|Flevolaond]]. De netuur in Oldebroek is ok arg ofwisselend, ie hebt [[heed (vegetasie)|heedvelden]], [[bos]]sen mar ok [[zaandverstuving|zaondverstoevings]] en veule meer.
 
 ==Geschiedenisse==
-D'r hef mees'n in de [[Prehistorie]] in 't Oldebroek geleefd. D'r bint verschillende vondsten bekend uut disse periode. <ref>http://www.rmo.nl/collectie/zoeken?q=oldebroek</ref>
+D'r hef mees'n in de [[Prehistorie]] in 't Oldebroek geleefd. D'r bint verschillende vondsten bekend uut disse periode.<ref>http://www.rmo.nl/collectie/zoeken?q=oldebroek</ref>
 
 Waor de name ''Oldebroek'' vandan kump is niet mit honderd percent zekerheid te zegen. Sommigen geschiedeniskenners denken dät Oldebroek zien name te danken hef an de vestiging van [[Hollaand (gewest)|Hollaonders]] in 't vere vleden (''Hollaonderbroek''). Meer aanneemlijk is dat de naam ontstoan is nadat de Groaf van [[Gelre]] 't broek begon te ontginnen bi-j de [[IJssel]], [[Nijbroek]]. Zo kon hi-j onderschied moak'n tussen disse twee belangrieke ontginningen. ''Oldebroek'' komt als eerst veur in 'n oorkonde uut 1378. Noast disse ontginning is in de [[gemiente (bestuur)|gemeente]] de ontginning van [[Oosterwolde (Gelderlaond)|Oosterwolde]] bekend, die older is: disse ontginning begon rond 1200.
 
 ==Overige kernen==
-[[Bovenvene]], [[Duunkarken]], [[Eekt]], [[Hattemerbroek]], [[Karkdarp (Oldebroek)|Karkdarp]], [['t Loo (Oldebroek)|'t Loo]], [[Mullegen]], [[Noordeinde (Oldebroek)|Noordeinde]], [[Oldebroek]], [[Oosterwolde (Gelderlaond)|Oosterwolde]], [[Posthoorne]], [[Trutjeshoek]], [[Voskule]] en [[Wezep]].
+[[Bovenvene]], [[Duunkarken]], [[Eekt]], [[Hattemerbroek]], [[Karkdarp (Oldebroek)|Karkdarp]], [['t Loo (Oldebroek)|'t Loo]], [[Mullegen]], [[Noordeinde (Oldebroek)|Noordeinde]], Oldebroek, [[Oosterwolde (Gelderlaond)|Oosterwolde]], [[Posthoorne]], [[Trutjeshoek]], [[Voskule]] en [[Wezep]].
 
 ==Buurte in Oldebroek==
 t [[Winkeldarp]]
