corr using [[Project:AWB|AWB]]

--- a/Pennsylvanies-Duuts.mw
+++ b/Pennsylvanies-Duuts.mw
@@ -12,7 +12,7 @@
 **[[West-Germaans]]
 ***[[Heugduuts]]
 ****[[West-Mirreduuts]]
-*****[[Pennsylvanies-Duuts]]
+*****Pennsylvanies-Duuts
 | skrift = t [[Latiense alfabet]]
 | iso1 = n.v.t.
 | iso2 = n.v.t.
@@ -27,4 +27,5 @@ Noe-an-n-dag kö'j de sprekkers nog veendn in n Kanadeensen proveensie [[Ontario
 Der zeent in Noord-Amerika ok greupe dee't [[Plautdietsch]] sprekt, moar dee sproake is heal oars a't Pennsylvanies-Duuts.
 
 {{Dialekt|twd}}
+
 [[Kategorie:Germaanse taol]]
