corr using [[Project:AWB|AWB]]

--- a/Raolte.mw
+++ b/Raolte.mw
@@ -18,7 +18,7 @@
 | postcode = 8055, 8100-8119, 8140-8144
 | webstee = [http://www.raalte.nl www.raalte.nl]
 }}
-'''Raolte''' is n [[gemiente (bestuur)|gemeente]] en plaatse in de [[pervincie|provinsie]] [[Oaveriessel]] in t sentrum van [[Sallaand]]. De gemeente had op [[31 december|1 jannewaori]] [[2008|2019]] 37.158 inwoners (bron: CBS) en hef n oppervlakte van 172,54 [[vierkaante kilemeter|km²]] (waorvan 0,41 km² water).
+'''Raolte''' is n [[gemiente (bestuur)|gemeente]] en plaatse in de [[pervincie|provinsie]] [[Oaveriessel]] in t sentrum van [[Sallaand]]. De gemeente had op [[31 december|1 jannewaori]] [[2008|2019]] 37.158 inwoners (bron: CBS) en hef n oppervlakte van 172,54 [[vierkaante kilemeter|km²]] (waorvan 0,41&nbsp;km² water).
 
 In de leste waeke van [[augustus]] vieren ze in Raolte t oogstdankfeest [[Stöppelhaene]].
 
@@ -31,7 +31,7 @@ De gemeente besteet uut de volgende kernen:
 !Plaetsnaam
 !Inwoners
 |-8
-|[[Raolte]]
+|Raolte
 |ALIGN="right"|20.015
 |-
 |[[Heino (Roalte)|Heino]]
@@ -71,7 +71,7 @@ De gemeente besteet uut de volgende kernen:
 
 ==Kaarte==
 [[Ofbeelding:Map - NL - Raalte (2009).svg|thumb|300px|left|Raolte en umgeving]]
-<br clear=left />
+{{clear|left}}
 
 {{Commonscat|Raalte}}
 {{Roalte}}
