--- a/Regiolect.mw
+++ b/Regiolect.mw
@@ -2,7 +2,7 @@
 
 In [[Limburg (Nederlaand)|Nederlaans-Limburg]] nemp de variasie in de pläselijke dialecten of en nemp een Limburgs regiolect de functies daorvan langzämeraand over. Daor is dan ook, veural in de steden, vule verzet tegen dit preces, en ze doen väke pogingen de dialectwoordenschat in leven te ollen. In gebieden waor de dialectvariasie nog groter is, bi'jveurbeeld [[Limburg (België)|Belgisch-Limburg]], wört de vörming van een regiolect daor tevule deur e-inderd, en gebruken ze de standardtääl in de communicasie mit sprekers van een aander dialect.
 
-Ook in 't Nedersaksische täälgebied e-j in sommige regio's ook wel een soort [[regiolect]], mär 't verskiensel kump over 't algemien niet zo vule veur, umdat mensen väke gewoon der eigen dialect blieven praoten, en in sommige gevallen 't een betien anpassen. 
+Ook in 't Nedersaksische täälgebied e-j in sommige regio's ook wel een soort regiolect, mär 't verskiensel kump over 't algemien niet zo vule veur, umdat mensen väke gewoon der eigen dialect blieven praoten, en in sommige gevallen 't een betien anpassen.
 
 't [[Westlaauwers Frais#Fraise standerdtoal|Standardfries]] is ook een goed veurbeeld van een regiolect, umdat pläselijke dialectverschillen der niet zovule in veurkomen.
 
