corr using [[Project:AWB|AWB]]

--- a/Stasjon_Eanske.mw
+++ b/Stasjon_Eanske.mw
@@ -11,7 +11,7 @@
 | head1_5     = Lienden | item1_5 = [[Spoorliende Zutfent - Glanerbekke|Stoatsliende D]]<br>[[Westmünsterlandbahn]]
 | head1_6     = Verveurders | item1_6 = [[Nederlandse Spoorwegen|NS]]<br>[[Deutsche Bahn|DB Regio]]
 }}<noinclude>
-'''Stasjon Eanske''' is n [[Neerlaand|Neerlaands]] [[spoorwegstasjon]]. t Gung los öp 1 julie 1866, moar t stasjongebaaw van noe-an-n-dag kömp oet 1950. t Stasjon lig an n raand van t sentrum van [[Eanske]], moar lea doe't baawd wörn boeten de stad an [[Spoorliende Zutfent - Glanerbekke|stoatsspoorliende D]] ([[Zutfent]] - De [[Gronauwe]]; los-doan tusken 1865 en 1868).
+'''Stasjon Eanske''' is n [[Neerlaand]]s [[spoorwegstasjon]]. t Gung los öp 1 julie 1866, moar t stasjongebaaw van noe-an-n-dag kömp oet 1950. t Stasjon lig an n raand van t sentrum van [[Eanske]], moar lea doe't baawd wörn boeten de stad an [[Spoorliende Zutfent - Glanerbekke|stoatsspoorliende D]] ([[Zutfent]] - De [[Gronauwe]]; los-doan tusken 1865 en 1868).
 
 ==Stasjon SS (Staatsspoor)==
 [[Bestaand:Station Enschede 1943.jpg|thumb|right|250px|Stasjon SS in 1943.]]
@@ -43,32 +43,32 @@ t Stasjon van Eanske is höllemoal herniejd in 2013. t Wark an t spoor gebeurn v
 |-
 | 1600
 | [[Intercity]]
-| [[Stasjon Skiphol|Skiphol]] - [[Stasjon Amesfoort|Amesfoort]] - [[Stasjon Deventer|Deventer]] - [[Stasjon Hengel|Hengel]] - [[Stasjon Eanske|Eanske]]
+| [[Stasjon Skiphol|Skiphol]] - [[Stasjon Amesfoort|Amesfoort]] - [[Stasjon Deventer|Deventer]] - [[Stasjon Hengel|Hengel]] - Eanske
 |
 |-
 | 1700
 | [[Intercity]]
-| [[Stasjon N Heeg Sentroal|N Heeg Sentroal]] - [[Stasjon Utrech Sentroal|Utrech Sentroal]] - [[Stasjon Amesfoort|Amesfoort]] - [[Stasjon Deventer|Deventer]] - [[Stasjon Hengel|Hengel]] - [[Stasjon Eanske|Eanske]]
+| [[Stasjon N Heeg Sentroal|N Heeg Sentroal]] - [[Stasjon Utrech Sentroal|Utrech Sentroal]] - [[Stasjon Amesfoort|Amesfoort]] - [[Stasjon Deventer|Deventer]] - [[Stasjon Hengel|Hengel]] - Eanske
 | 
 |-
 | 7000
 | [[Sprinter (treane)|Sprinter]]
-| [[Stasjon Apeldoorne|Apeldoorne]] - [[Stasjon Deventer|Deventer]] - [[Stasjon Almelo|Almelo]] - [[Stasjon Hengel|Hengel]] - [[Stasjon Eanske|Eanske]]
+| [[Stasjon Apeldoorne|Apeldoorne]] - [[Stasjon Deventer|Deventer]] - [[Stasjon Almelo|Almelo]] - [[Stasjon Hengel|Hengel]] - Eanske
 | Ridt in n oawnd en öp zöndag nich tusken Almelo en Eanske.
 |-
 | 7900
 | [[Sprinter (treane)|Sprinter]]
-| [[Stasjon Zwol|Zwol]] - [[Stasjon Almelo|Almelo]] - [[Stasjon Hengel|Hengel]] - [[Stasjon Eanske|Eanske]]
+| [[Stasjon Zwol|Zwol]] - [[Stasjon Almelo|Almelo]] - [[Stasjon Hengel|Hengel]] - Eanske
 |
 |-
 | 20180/RB64
 | [[Regionalbahn]] ([[DB Regio NRW|DB Regio]])
-| [[Stasjon Eanske|Eanske]] - [[Münster Hauptbahnof|Münster (Westf.) Hbf]]
+| Eanske - [[Münster Hauptbahnof|Münster (Westf.) Hbf]]
 |
 |-
 | 20230/RB51
 | [[Regionalbahn]] ([[DB Regio NRW|DB Regio]])
-| [[Stasjon Eanske|Eanske]] - [[Dortmund Hauptbahnhof|Dortmund Hbf]]
+| Eanske - [[Dortmund Hauptbahnhof|Dortmund Hbf]]
 |
 |}
 
@@ -142,6 +142,6 @@ t Busstasjon ''Eanske Sentroal'' lig nöast t treanstasjon, woarvanof bussen noa
 | Arriva, vlöksdeenst, rid in n oawnd en in t weekende alleane vanof Busstasjon Hoksebarge
 |}
 
-[[Kattegerie:Tweants artikel]]
-[[Kattegerie:Spoorwegstation in Oaweriessel]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Spoorwegstation in Oaweriessel]]
 [[Kategorie:Eanske]]
