corr using [[Project:AWB|AWB]]

--- a/Veluws.mw
+++ b/Veluws.mw
@@ -15,7 +15,7 @@
 ***[[West-Germaans]]   
 ****[[Nederduuts]]
 ****[[Nedersaksies]] 
-*****[[Veluws]]
+*****Veluws
 | skrift      = t [[Latiense alfabet]]  
 | staotus     = t Veluws wördt ezien as dialekt van t [[Nedersaksies]]
 | iso1        = n.v.t.
@@ -51,7 +51,7 @@ In woordeschat wördt t West-Veluws oek wat meer beïnvleud deur t [[Standerdned
 Ondanks de verschillen he'j oek n bulte overeenkomsten, n veurbeeld hiervan is de Nederlaandse ''ij'', die n eeuw eleen nog heel aanders uutespreuken wördden, zo ongeveer mit n klank die wat tussen de ''korte i'' en de ''lange ie'' inhank en de ''ui'', mit n klank die tussen de ''korte u'' en de ''lange uu'' inhank. Disse klanken bin grotendeels verdwenen in t Oost- en West-Veluws, mer je kunnen ze nog altied heuren in [[Doorspiek]] (Oost-Veluws), [[Nunspeet]] (West-Veluws) en [[Urk]] ([[Urkers]]).
 
 ==Overgang van t Sallaands naor t Oost-Veluws==
-t Meest noordoostelike deel van de [[Veluwe]] wördt evormp deur de [[Iesselvallei]], en deur de darpen an de oostkaante van de Veluwse heuvelrogge, an de ouwe weg van [[Zwolle]] naor [[Apeldoorne (stad)|Apeldoorne]]: [[Attem|Hattem]], [[Waopenvelde|Wapenvelde]], [[Heerde]], [[Epe]], [[Emst]], [[Vaossen]], [[Wenum-Wiesel]] en oek Apeldoorne zelf. Disse dialekten lieken stark op wat an de overkaante van de [[Iessel]] espreuken wördt. Disse toch aordig breje rivier is in t geheel gien dialektscheiding, we zien zelfs n opvallend taalverschiensel dat in Overiessel beparkt is tot n paor Sallaandse plaotsen ([[Dalsen]], [[Heino]], [[Raolte]], [[Wieje]], [[Olst]]) en daorbuten in heel Overiessel niet veurkömp, juust wel weer in de Gelderse Iesselvallei anwezig is. We dujen hiermee vanzelf op de uutspraak van de korte ''a'' as n ''ä'', en de uutspraak van de ''aa'' (in bepaolde woorden) as ''ää''. 
+t Meest noordoostelike deel van de [[Veluwe]] wördt evormp deur de [[Iesselvallei]], en deur de darpen an de oostkaante van de Veluwse heuvelrogge, an de ouwe weg van [[Zwolle]] naor [[Apeldoorne (stad)|Apeldoorne]]: [[Attem|Hattem]], [[Waopenvelde|Wapenvelde]], [[Heerde]], [[Epe]], [[Emst]], [[Vaossen]], [[Wenum-Wiesel]] en oek Apeldoorne zelf. Disse dialekten lieken stark op wat an de overkaante van de [[Iessel]] espreuken wördt. Disse toch aordig breje rivier is in t geheel gien dialektscheiding, we zien zelfs n opvallend taalverschiensel dat in Overiessel beparkt is tot n paor Sallaandse plaotsen ([[Dalsen]], [[Heino]], [[Raolte]], [[Wieje]], [[Olst]]) en daorbuten in heel Overiessel niet veurkömp, juust wel weer in de Gelderse Iesselvallei anwezig is. We dujen hiermee vanzelf op de uutspraak van de korte ''a'' as n ''ä'', en de uutspraak van de ''aa'' (in bepaolde woorden) as ''ää''.
 
 In aandere woorden is de Nederlaandse aa op de oostelike [[Veluwe]] n ''ao'', net as in [[Overiessel]] en in de [[Achterhook|Achterhoek]]. t Geet hier um n historiese verdeling: woorden mit n oorspronkelik (in t West-Germaans) lange ''aa'' bin in t vere vlejen 'verduusterd' tot ''ao'' (bieveurbeeld: ''schaop''). Woorden mit n ''aa'' die eerst laoter lange ewörden bin (deur rekking in open lettergrepe) hebben an dat proses van verduustering, dat toe al aofesleuten was, niet mee-edaon, en bin n 'heldere' ''aa'' ebleven (bieveurbeeld: ''water''), en in t oosten dus ''ää'' ewörden.
 
