corr using [[Project:AWB|AWB]]

--- a/Zaand-Drèents.mw
+++ b/Zaand-Drèents.mw
@@ -31,7 +31,7 @@
 ****[[Nedersaksisch]] 
 *****[[Drèents]]
 ******[[Zuud-Drèents]]
-*******[[Zaand-Drèents]] 
+*******Zaand-Drèents 
 |-
 |Schrift 
 |[[Latainse alfabet|Latiense alfabet]] 
@@ -94,5 +94,5 @@ Welk gebied of 't Zaand-Drèents krek umvat, verschilt per bron. De ''Taalgids D
 ==Bronnen==
 * Darwinkel, Abel, Jan Germs en H. Slot (2005), ''Moi! Taalgids Drenthe'', Assen: In Boekvorm Uitgevers bv
 
-[[Kategorie:Drèents_artikel]]
+[[Kategorie:Drèents artikel]]
 [[Kategorie:Drèents|*]]
