corr using [[Project:AWB|AWB]]

--- a/Zuudoost-Drèents.mw
+++ b/Zuudoost-Drèents.mw
@@ -14,7 +14,7 @@
 |[[Nederlaand]]
 |-
 |Taalgebied
-|Ien de Drèentse gemiente [[Em_(gemiente)|Em]]
+|Ien de Drèentse gemiente [[Em (gemiente)|Em]]
 |-
 |Antal sprekers 
 |?
@@ -31,7 +31,7 @@
 ****[[Nedersaksisch]]
 *****[[Drèents]]
 ******[[Zuud-Drèents]]
-*******[[Zuudoost-Drèents]]
+*******Zuudoost-Drèents
 |-
 |Schrift 
 |[[Latainse alfabet|Latiense alfabet]] 
@@ -55,11 +55,11 @@
 't Zuudoost-Drèents praot ze ien 't legere diel van de gemiente Em.
 
 ==Wus ie det...==
-* ...de laandelijk bekende popgroep [[Skik]] en heur veurman [[Daniël Lohues]] uut [[Erica_(Drenthe)|Erica]] meziek maakt mit teksten ien 't Zuudoost-Drèents?
+* ...de laandelijk bekende popgroep [[Skik]] en heur veurman [[Daniël Lohues]] uut [[Erica (Drenthe)|Erica]] meziek maakt mit teksten ien 't Zuudoost-Drèents?
 
 ==Bronnen==
 * Darwinkel, Abel, Jan Germs en H. Slot (2005), ''Moi! Taalgids Drenthe'', Assen: In Boekvorm Uitgevers bv
 * [http://www.drentsetaol.nl Stichting Drentse Taol]
 
-[[Kategorie:Drèents_artikel]]
+[[Kategorie:Drèents artikel]]
 [[Kategorie:Drèents|*]]
