*Empty MediaWiki Message*

--- a/Kameroen.mw
+++ b/Kameroen.mw
@@ -28,7 +28,7 @@ In Kameroen wordt mear as 200 verskeadene sproaken ekuierd. [[Fraans]]k en [[Eng
 
 Noa de onofhaankelikhead gung et niej evörmde laand bie et [[Gemenebest]], mer et grötste deel van et laand har aait ne [[Duutslaand|Duutse]] [[kolonie]] ewest en was noa den [[Eersten Wearldoorlog]] een [[Fraankriek|Fraans]] mandaat ewördn. Et laand is wied en zied bekeand um de inheemse muziekstielen, vuural [[makossa]] en [[bikoetsi]]. Doarnöast dut et nasjonale [[vootbal]]-elftal van Kameroen et aait good op wearldwedstrieden.
 
-De vrogst bekeande inwonners van et gebeed heurden bie de [[Sao-beskawing]] roondum et [[Tsjaadmear]] en bie de [[jager-gadderaar]]s van de [[Baka]] in et zuudoostelike reagenwoold. [[Portugal|Portugese oontdekkingsvoarders]] kömmen in et [[15e eeuw|15de joarhoonderd]] an op de kuste en neumden et ''Rio dos Camarões'' (''Garnalenrivier''), wat in et [[Engels]] verbasterd wör töt Cameroon. [[Foelavolk|Foela-soldoaten]] stichtten in et [[19e eeuw|19de joarhoonderd et [[Emir (titel)|Emiroat]] [[Adamawa]] in et noorden. Doarnöast vestigden zich stoarke stamdommen en [[Fon (Kameroen)|Fondommen]]. In [[1884]] wör Kameroen as ''Kamerun'' ne kolonie van et [[Duutse Riek]].
+De vrogst bekeande inwonners van et gebeed heurden bie de [[Sao-beskawing]] roondum et [[Tsjaadmear]] en bie de [[jager-gadderaar]]s van de [[Baka]] in et zuudoostelike reagenwoold. [[Portugal|Portugese oontdekkingsvoarders]] kömmen in et [[15e eeuw|15de joarhoonderd]] an op de kuste en neumden et ''Rio dos Camarões'' (''Garnalenrivier''), wat in et [[Engels]] verbasterd wör töt Cameroon. [[Foelavolk|Foela-soldoaten]] stichtten in et [[19e eeuw|19de joarhoonderd]] et [[Emir (titel)|Emiroat]] [[Adamawa]] in et noorden. Doarnöast vestigden zich stoarke stamdommen en [[Fon (Kameroen)|Fondommen]]. In [[1884]] wör Kameroen as ''Kamerun'' ne kolonie van et [[Duutse Riek]].
 
 Noa den Eersten Wearldoorlog wör et laand verdeeld tusken [[Fraankriek]] en et [[Verenigd Keuninkriek]]. De partieje [[Volksverboond van Kameroen]], ofwal de ''Union des Populations du Cameroun'' (UPC) vreugen um onofhaankelikhead. Fraankriek verbeud de partieje tusken [[1950]] en [[1960]]. Et verkloarden de oorlog an Fraankriek, wat töt [[1971]] doerden. in [[1960]] wör et Kameroense deel wat duur Fraankriek regeard wör, onofhaankelik. Et heten de Republiek Kameroen oonder presideant [[Ahmadou Ahidjo]]. In [[1961]] sleut et zudelike Engelse deel zik der bie an, woernoa as et wiedter gung as de Federale Republiek Kameroen. Et laand wör ummedeupt töt de Vereanigde Republiek Kameroen in [[1972]] en töt de Republiek Kameroen in [[1984]].
 
