*Empty MediaWiki Message*

--- a/Frankriek.mw
+++ b/Frankriek.mw
@@ -46,7 +46,7 @@ Op de liest van [[wereldstad|wereldstejen]] staon de volgende Franse stejen:
 
 == Uutgoande verwiezingen ==
 {{commonscat|France}}
-{{Dialekt|wvel|[[Putters {{!}} Putten]]}}
+{{Dialekt|wvel|[[Putters|Putten]]}}
 
 [[Kategorie:West-Veluws artikel]]
 [[Kategorie:Frankriek| ]]
