--- a/Haarst.mw
+++ b/Haarst.mw
@@ -62,7 +62,7 @@ Maarkweerdig is dat, volges de schoolboeken, de haarst op [[21 september]] zou b
 ** ''naojaor''
 
 {{Commons|Autumn}}
-{{Dialekt|wvel|[[Putters {{!}} Putten]]}}
+{{Dialekt|wvel|[[Putters|Putten]]}}
 
 [[Kategorie:West-Veluws artikel]]
 [[Kategorie:Seizoen]]
