*Empty MediaWiki Message*

--- a/Lente.mw
+++ b/Lente.mw
@@ -71,7 +71,7 @@ Op et südelik halvruund beginnen op disse dåtüms de [[haarst|harvst]].
 ** [[Vechtdals]]: ''vöörjår'', ''le(a)nte''
 
 {{Commonscat|Spring}}
-{{Dialekt|wvel|[[Putters {{!}} Putten]]}}
+{{Dialekt|wvel|[[Putters|Putten]]}}
 
 [[Kategorie:West-Veluws artikel]]
 [[Kategorie:Seizoen]]
