--- a/Annie_Schreijer-Pierik.mw
+++ b/Annie_Schreijer-Pierik.mw
@@ -12,6 +12,8 @@ Schreijer-Pierik is ok ambassadeur van streektaelorgenisaosie SONT (www.sont.nl
 == Persoonlik ==
 Annie Schreijer-Pierik is trouwd en hef dree keender. Hee heurt bie de [[Rooms-Katholieke Karke|Rooms-Katholieke Keark]].
 
+{{Commonscat}}
+
 {{DEFAULTSORT:Schreijer-Pierik, Annie}}
 [[Kategorie:Tweants artikel]]
 [[Kategorie:CDA Politikus]]
