--- a/Annie_Schreijer-Pierik.mw
+++ b/Annie_Schreijer-Pierik.mw
@@ -12,7 +12,9 @@ Schreijer-Pierik is ok ambassadeur van streektaelorgenisaosie SONT (www.sont.nl
 == Persoonlik ==
 Annie Schreijer-Pierik is trouwd en hef dree keender. Hee heurt bie de [[Rooms-Katholieke Karke|Rooms-Katholieke Keark]].
 
+== Oetgoande verbeendiges ==
 {{Commonscat}}
+* [https://www.parlement.com/id/vg09llke1yul/j_m_g_annie_schreijer_pierik Profielziede], Parlement.com
 
 {{DEFAULTSORT:Schreijer-Pierik, Annie}}
 [[Kategorie:Tweants artikel]]
