*Empty MediaWiki Message*

--- a/Lente.mw
+++ b/Lente.mw
@@ -2,77 +2,75 @@
 [[Bestaand:Montmelon, Jura in spring.JPG|thumb|260px|right|Leynte in de Vranse Jura]]
 [[Bestaand:Giuseppe Arcimboldo - Spring, 1573.jpg|thumb|right|260px|''Leinte'' eskilderd döör Giuseppe Arcimboldo]]
 
-'''Leynte''' ov '''vöörjår''' is een van de vyr [[seizoen|seysundn]]. Et [[steernskunde|sterrekündig]] bepålde begin van de leynte is de [[equinox|leynte-ekwinoks]] (ruund [[20 meert]] op et [[noordelijk halvruund]] en ruund [[23 september]] op et [[südelik halvruund]]). De [[zunne|sün]] gåt dan döör et leyntepünt en de dag en de nacht binnen termet lyk alleens in lenkte. De leynte eyndigt mit de [[zunnewende|sumersünnewende]] (ruund [[21 juni|21 jüny]] op et noordelijk halvruund en [[21 desember]] op et südelik halvruund).
+'''Lente''' of '''vöärjår''' is een van de veer [[seizoen|seisunen]]. Et [[steernskunde|sterrekündig]] bepålde begün van de lente is de [[equinox|lente-ekwinoks]] (rund [[20 meert|20 maert]] up et [[noordelik halvrund]] en rund [[23 september]] op et [[südelik halvrund]]). De [[zunne|sünne]] geyt dan döär et lentepünte en den dag en den nacht binnen termed lyk allene in längte. De lente endigt mid de [[zunnewende|sumersünnewende]] (rund [[21 juni]] yp et noordelik halvrund en [[21 december]] up et südelik halvrund).
 
-Üm praktiske redens, mar uuk üm redens dy mit et klimåt van duun hebben, begint de [[meteorologie|meteorologiske]] leynte eerder, op 1 meert op et noordelik halvruund en op 1 september op et südelik halvruund. Et düürt dan tot [[1 juni|1 jüny]] en op et südelik halvruund tot [[1 desember]].
+Üm praktiske readens, mar ouk üm readens dee mid et klimåt van doon hebbet, begünt de [[meteorologie|meteorologiske]] lente eyrder, up 1 maert up et noordelik halvrund en up 1 september op et südelik halvrund. Et duurt dan töt [[1 juni]] en up et südelik halvrund töt [[1 december]].
 
-Des Leyntes gån de planten (weer) grööyen en blööyen. Nå [[Iesheiligen|Ysheyligen]] is de kanse op vorst vry kleyn.
+Des Lentes gåt de planten (wear) gröien en blöien. Nå [[Iesheiligen|Ysheiligen]] is de kanse up vorst vry klein.
 
-== Rillegyöse veesten en gedenkdagen in de leynte ==
-De [[Rooms-Katholieke Karke|rooms-kattelyke]] tredysy het de [[vasten]]peryode, dy begünt op [[aswoensdag|aswuunsdag]] en endigt mit [[Poaske|Påsen]]. Vasten wort vöörov-egån döör de [[vastenoavend|vastenåvend]]. Nåst Påsen hebben se in de [[christendom|kristelike]] tredysy uuk de ''[[Hillege Week|Guye Week]]''; dry dagen vöör et påsweekende, [[Witte Donderdag]], [[Goeie Vriedag|Gude Vrydag]] en [[Stille Zaoterdag|Stille Såterdag]].
+== Religiöse feesten en gedenkdagen in de lente ==
+De [[Rooms-Katholieke Karke|roomsk-katolike]] traditys hebbet de [[vasten]]periode, dee begünt up [[aswoensdag|aswoonsdag]] en endigt mid [[Poaske|Påsken]]. Vasten wörd vöärof-egåne döär de [[vastenoavend|vastenåvend]]. Nöäst Påsken hebbet se in de [[christendom|kristelike]] tradity ouk de ''[[Hillege Week|Gode Weake]]''; dree dagen vöär et påskweakende, [[Witte Dunderdag]], [[Goeie Vriedag|Gode Vrydag]] en [[Stille Zaoterdag|Stille Såterdag]].
 
-In et [[hindoeïsme|hinduisme]] wort so ruund Påsen de [[Holi-Phagwa]] evyrd.
+In et [[hindoeïsme|hinduisme]] wörd so rund Påsken de [[Holi-Phagwa]] evyred.
 
-De sekelyre versy van Påsen wort ekenmaarkt döör simbolen van ny leven, soas (eklöörde/evarvde) eyers. Uuk de [[paoshaos|påshås]] höört by dit veest.
+De sekulire varsy van Påsken wörd ekenmarkt döär symbolen van ny leaven, so as (eklöörde/evarvde) eier. Ouk de [[paoshaos|Påskhase]] höyrt by dit feest.
 
-== Begin van de sterrekündige leynte ==
-Begin van de [[steernskunde|sterrekündige]] leynte (op et noordelik halvruund) in de kommende jåren:
+== Begün van de sterrekündige lente ==
+Begün van de [[steernskunde|sterrekündige]] lente (up et noordelik halvrund) in de kummende jåren:
 
 {| border="1" style="border:1px silver solid; border-collapse: collapse; width: 20em;"
-! Jår !! Dåtüm !! Tyd
+! Jår !! Dåtum !! Tyd
 |-
-| 2003 || 21 meert || 02:00
+| 2003 || 21 maert || 02:00
 |- 
-| 2004 || 20 meert || 07:49
+| 2004 || 20 maert || 07:49
 |- 
-| 2005 || 20 meert || 13:33
+| 2005 || 20 maert || 13:33
 |- 
-| 2006 || 20 meert || 19:26
+| 2006 || 20 maert || 19:26
 |- 
-| 2007 || 21 meert || 01:07
+| 2007 || 21 maert || 01:07
 |- 
-| 2008 || 20 meert || 06:48
+| 2008 || 20 maert || 06:48
 |-
-| 2009 || 20 meert || 12:44
+| 2009 || 20 maert || 12:44
 |- 
-| 2010 || 20 meert || 18:32
+| 2010 || 20 maert || 18:32
 |- 
-| 2011 || 21 meert || 00:21
+| 2011 || 21 maert || 00:21
 |- 
-| 2012 || 20 meert || 06:14
+| 2012 || 20 maert || 06:14
 |- 
-| 2013 || 20 meert || 11:02
+| 2013 || 20 maert || 11:02
 |- 
-| 2014 || 20 meert || 17:57
+| 2014 || 20 maert || 17:57
 |- 
-| 2015 || 20 meert || 23:45
+| 2015 || 20 maert || 23:45
 |- 
-| 2016 || 20 meert || 05:30
+| 2016 || 20 maert || 05:30
 |- 
-| 2017 || 20 meert || 11:28
+| 2017 || 20 maert || 11:28
 |- 
-| 2018 || 20 meert || 17:15
+| 2018 || 20 maert || 17:15
 |- 
-| 2019 || 20 meert || 22:58
+| 2019 || 20 maert || 22:58
 |- 
-| 2020 || 20 meert || 04:49
+| 2020 || 20 maert || 04:49
 |}
 
-De an-egöven tyd is de plåtselijke Nederlanse tyd.
+De an egeyven tyd is de plaatselike neaderlandske tyd.
 
-Op et südelik halvruund beginnen op disse dåtüms de [[haarst|harvst]].
+Up et südelik halvrund begünnet up disse dåtums de [[haarst|harvst]].
 
-== Nedersaksisk ==
-* [[Drèents]]: ''vöörjår'', ''meytyd'', ''maytyd''
-* [[Grunnegs]]: ''lìnte'', ''maaytyd''
-* [[Veluws]]: ''le{{small()|y}}nte'' ov ''vöörjår''
-* [[Stellingwarfs]]: ''meytyd''
-* [[Sallaans]]: ''vöörjår'', ''lente''
-** [[Vechtdals]]: ''vöörjår'', ''le(a)nte''
+== Neadersassisk ==
+* [[Drèents]]: ''veurjoar'', ''meitied'', ''maitied''
+* [[Grunnegs]]: ''lìnte'', ''maaitied''
+* [[Veluws]]: ''le{{small()|i}}nte'' of ''veurjoar''
+* [[Stellingwarfs]]: ''meitied''
+* [[Sallaans]]: ''veurjoar'', ''lente''
+** [[Vechtdals]]: ''veurjoar'', ''le(a)nte''
 
 {{Commonscat|Spring}}
-{{Dialekt|wvel|[[Putters|Putten]]}}
-
-[[Kategorie:West-Veluws artikel]]
+{{Dialekt|sdz}}
 [[Kategorie:Seizoen]]
 [[Kategorie:Weerkunde]]
