/* Begün van de sterrekündige lente */

--- a/Lente.mw
+++ b/Lente.mw
@@ -16,7 +16,7 @@ In et [[hindoeïsme|hinduisme]] wörd so rund Påsken de [[Holi-Phagwa]] evyred.
 De sekulire varsy van Påsken wörd ekenmarkt döär symbolen van ny leaven, so as (eklöörde/evarvde) eier. Ouk de [[paoshaos|Påskhase]] höyrt by dit feest.
 
 == Begün van de sterrekündige lente ==
-Begün van de [[steernskunde|sterrekündige]] lente (up et noordelik halvrund) in de kummende jåren:
+Begün van de [[steernskunde|sterrekündige]] lente (up et noordelik halvrund) in de of eloupen- en de et kummend jår:
 
 {| border="1" style="border:1px silver solid; border-collapse: collapse; width: 20em;"
 ! Jår !! Dåtum !! Tyd
