--- a/Koeze.mw
+++ b/Koeze.mw
@@ -11,7 +11,7 @@ Volwassenen hebt normaol 20 kiezen, as de premolaren met-erekend wörden. De ver
 
 == Nedersaksisch ==
 
-* [[Tweants]], [[Grunnegs]], [[Achterhooks]]: ''koeze'', ''koes''
+* [[Tweants]], [[Sallaans]], [[Grunnegs]], [[Achterhooks]]: ''koeze'', ''koes''
 * [[Veluws]]:
 ** [[West-Veluws]]: ''kieze'' of ''kies''
 ** [[Oost-Veluws]]: ''koeze'' of ''kieze''
