sorry I don't speak Low Saxon. I just wanted to clarify to the reader that these example phrases are in Livvi-Karelian dialect, not Karelian proper, in which "my name is..." would be "milma kučutah", not "minuu...". There are other differences as well.

--- a/Kareelsk.mw
+++ b/Kareelsk.mw
@@ -1,6 +1,6 @@
 '''Kareelsk''' of '''Karelisk''' (eygenspråklik ''karjalan kieli'') is en [[finno-ugriske språken|finno-ugriske språke]], dee in [[Rusland]] un [[Finland]] sproaken wardt.
 
-== Eksempels ==
+== Eksempels (up livvidialekt) ==
 
 * Moin - ''Terveh''
 * Goden morgen - ''Hyviä huondestu''
