--- a/Ente.mw
+++ b/Ente.mw
@@ -64,6 +64,7 @@ Een paor bekende entensoorten bin:
 * [[Grunnegs]]: ''aind''
 * [[Stellingwarfs]]: ''ente''
 * [[Tweants]]: ''eande''
+* [[Sallaands]]: ''ente''
 * [[Veluws]]: ''ent{{small()|e}}, ante''
 
 == Foto-uutstalling ==
