*Empty MediaWiki Message*

--- a/Bokel_(Eanske).mw
+++ b/Bokel_(Eanske).mw
@@ -17,7 +17,7 @@ n Groot gebuurn in de ruutersport is de Bokelse [[Military]]. Ook de bosrieke um
 * [http://www.vvvboekelo.nl/ VVV Boekelo]
 * [http://www.military-boekelo.nl/ Military-Boekelo]
 
-{{Mal:Eanske}}
+{{Eanske}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
