--- a/Albeargn.mw
+++ b/Albeargn.mw
@@ -3,7 +3,7 @@
 
 In Albeargn wördt alle joar de eerste karnavalsoptocht van Tweante hoaldn. t Doarp wördn al in de [[15e eeuw|viefteende eeuw]] neumd, umdat dootertied t St. Antoniusklooster stunn op de plek woar now de St. Pancratiuskearke steet.
 
-{{Mal:Tubbige}}
+{{Tubbige}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
