*Empty MediaWiki Message*

--- a/Beusebarg.mw
+++ b/Beusebarg.mw
@@ -13,7 +13,7 @@ Disse buurtverenige organiseert vuur joonk en oold verskeaidene aktiviteiten, wo
 ==Oetgoande verbeendige==
 *[http://www.beusebarg.nl Webstea van de boerskop]
 
-{{Mal: Riessen-Hoolten}}
+{{Riessen-Hoolten}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
