--- a/De_Veenhuus.mw
+++ b/De_Veenhuus.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Map NL - Nijkerk - De Veenhuis.svg|thumb|250px|Ligging van De Veenhuus]]
 '''De Veenhuus''' is een [[buurtschop|buurtschap]] in de gemeente [[Niekark]], in de [[Nederlaand|Nederlanse]] previnsie [[Gelderlaand|Gelderland]]. De buurtschap leit kortbie de buurtschap [[Holk]], in 't westen van de stad Niekark, an de Bunschoterweg.
 
-{{Sjabloon:Niekark}}
+{{Niekark}}
 
 [[Kategorie:West-Veluws artikel]]
 [[Kategorie:Plaotse in Gelderlaand]]
