corr using [[Project:AWB|AWB]]

--- a/Eanter.mw
+++ b/Eanter.mw
@@ -119,7 +119,7 @@ Met de gemeentelike herindeling warn völle Eantersen en Riesnders neet bliej. D
 
 {{Dia|Disse bladziede is eskreeuwn in t [[Riesns]]}}
 
-{{Mal:Wierdn}}
+{{Wierdn}}
 
 [[Kategorie:Tweants_artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
