corr using [[Project:AWB|AWB]]

--- a/Enkhuzens.mw
+++ b/Enkhuzens.mw
@@ -46,7 +46,7 @@ Vandag-en-dag wödt t Enkhuzer dialekt neet heel völle meer esprokken. Deurdat 
 ==Rifferenties==
 <references />
 
-{{Mal:SNLV}}
+{{SNLV}}
 
 [[Kategorie:Achterhooks_artikel]]
 [[Kategorie:Nederlaanse_streektael_en_dialekt]]
