corr using [[Project:AWB|AWB]]

--- a/Glanerbrug.mw
+++ b/Glanerbrug.mw
@@ -15,7 +15,7 @@ In ene van zinne stukskes hef [[Herman Finkers]] t ook oawer Glanerbrug. Hee zeg
 ==Oetgoande verbeendige==
 *[http://www.glanerbrug.info glanerbrug.info]
 
-{{Mal:Eanske}}
+{{Eanske}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
