--- a/Hoge_Heksel.mw
+++ b/Hoge_Heksel.mw
@@ -9,7 +9,7 @@ In de [[noaberskop]] Hoge Heksel lear op de greanze tusken [[Sallaand]] en [[Twe
 ==Mooi um te weetn==
 *n Almelosen komiek [[Herman Finkers]] dut zin leed "Beschuit" oawer t Hoge Heksel: ''Uit t Hoge Hexel komt dit liedje / de titel is "Beschuit" / het is een heel droog liedje / t is zelfs niet mogelijk dat je t fluit.''
 
-{{Mal:Wierdn}}
+{{Wierdn}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
