corr using [[Project:AWB|AWB]]

--- a/Maanderven.mw
+++ b/Maanderven.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding: Map NL - Tubbergen - Manderveen.png|thumb|right|250px|Maanderven in de gemeente [[Tubbig]]e]]
 '''Maanderven''' is n doarp in de gemeente [[Tubbig]]e in t noordn van [[Tweante]]. t Hef ongevear 640 inwonners.
 
-{{Mal:Tubbige}}
+{{Tubbige}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
