corr using [[Project:AWB|AWB]]

--- a/Ossel.mw
+++ b/Ossel.mw
@@ -7,7 +7,7 @@ Ut doarp hef ne Nederlaands Hervormde Kearke, ne leagere school en n kearkhof. I
 
 Vandaag-an-n-dag wordt Ossel bedriegd duur de stedelike en industriële ontwikkeling van Eanske.
 
-{{Mal:Eanske}}
+{{Eanske}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
