corr using [[Project:AWB|AWB]]

--- a/Schoere.mw
+++ b/Schoere.mw
@@ -20,7 +20,7 @@ De schoeren bin één van de meest beweeglijke delen van 't meenselijk lichaam, 
 ** ''schölder'' ([[Vaossen]], [[Loen]])
 ** ''schouwer''
 
-{{Sjabloon:Mìnskenlichoam}}
+{{Mìnskenlichoam}}
 
 [[Kategorie:West-Veluws artikel]]
 [[Kategorie:Lichem]]
