corr using [[Project:AWB|AWB]]

--- a/T_Langevenne.mw
+++ b/T_Langevenne.mw
@@ -8,7 +8,7 @@ Bie t Langnven lig n ennigstn [[esker]] van Neerlaand. Disse [[glaciaal proces|f
 ==Reffereansies==
 <references/>
 
-{{Mal:Tubbige}}
+{{Tubbige}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
