*Empty MediaWiki Message*

--- a/Karel_Diederik_Schönfeld_Wichers.mw
+++ b/Karel_Diederik_Schönfeld_Wichers.mw
@@ -59,4 +59,5 @@ Schönfeld-Wichers was den eyrsten den as syne ryssenske skryverye officieel uut
 
 {{Bron|<references/>}}
 
-[[Kategorie:Tweants artikel|Schönfeld Wichers, Karel Diederik]][[Kategorie:Schriever in t Tweants|Schönfeld Wichers, Karel Diederik]]
+[[Kategorie:Tweants artikel|Schönfeld Wichers, Karel Diederik]]
+[[Kategorie:Schriever in t Tweants|Schönfeld Wichers, Karel Diederik]]
