--- a/Messiasbeliedende_Jeuden.mw
+++ b/Messiasbeliedende_Jeuden.mw
@@ -9,4 +9,5 @@ In 't kristendom bint d'r meer gruupen die elementen uut 't jeudendom en 't kris
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Christendom]][[Kategorie:Jeudendom]]
+[[Kategorie:Christendom]]
+[[Kategorie:Jeudendom]]
