--- a/Marsmuziek.mw
+++ b/Marsmuziek.mw
@@ -7,6 +7,8 @@ Bie optocht- en feestmärse is n toonsoort meesttieds [[majeur]] um ne opgewekte
 
 Doodnmärse stoat vake in [[mineur]] en zeent völle laankzamer. In doodnmärse wörd zowat aait t punteerde ritme broekt, um de stoatigheaid te verstoarkn. Vake wordt dit soort märse ook op half tempo elop (één trad per twee tel).
 
+frysland
+
 == Gebroek ==
 === Militair gebroek ===
 In t leager wordt märse völle gebroekt um t marstempo an te gewen tiedns t marsjeern, en um te zorgn det de soldoatn de moodvearn nit loatt hangn. Elk leageroonderdeel har in vroger tiedn zin eegn stel märse. Nen mars van de [[marine]] zal heel aanders kleenkn as nen mars van de [[kavvelerie|kavalerie]]. Vroger ha'j allene heurns en bazuuns en bepoarkt slagwoark um leagersignaaln an te geewn.
