--- a/Marsmuziek.mw
+++ b/Marsmuziek.mw
@@ -7,7 +7,7 @@ Bie optocht- en feestmärse is n toonsoort meesttieds [[majeur]] um ne opgewekte
 
 Doodnmärse stoat vake in [[mineur]] en zeent völle laankzamer. In doodnmärse wörd zowat aait t punteerde ritme broekt, um de stoatigheaid te verstoarkn. Vake wordt dit soort märse ook op half tempo elop (één trad per twee tel).
 
-frysland
+frysland op dien trekker miet tanten mies 
 
 == Gebroek ==
 === Militair gebroek ===
