--- a/Bokelt.mw
+++ b/Bokelt.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding:DEU Bocholt COA.svg|thumb|right|100px|Et woapen van Bocholt]]
 [[Ofbeelding:Rathaus Bocholt am Marktplatz.jpg|thumb|right|Et olde raadhoes an de markte van Bocholt]]
-'''Bokelt''' ([[Duuts]]: ''Bocholt'') is ne [[Duutslaand|Duutse]] [[Stad (woonstee)|stad]] in de [[dailstoat|deelstoat]] [[Noordrhain-Westfele|Noordrien-Westfalen]] in et distrikt (kreis) [[Borken (distrikt)]]. De stad hef 73.000 inwonners <ref>http://www.it.nrw.de/statistik/a/daten/amtlichebevoelkerungszahlen/rp5_dez08.html</ref>
+'''Bokelt''' ([[Duuts]]: ''Bocholt'') is ne [[Duutslaand|Duutse]] [[Stad (woonstee)|stad]] in de [[dailstoat|deelstoat]] [[Noordrhain-Westfele|Noordrien-Westfalen]] in et distrikt (kreis) [[Borken (distrikt)|Borken]]. De stad hef 73.000 inwonners <ref>http://www.it.nrw.de/statistik/a/daten/amtlichebevoelkerungszahlen/rp5_dez08.html</ref>
 
 Bokelt leg an de [[Aa-strang|Bokelter Aa]], ten westen van et natoerpark Hohe Mark. Sinds [[1222]] hef Bokelt [[stadsrechten]]. Et historisches raadhoes is in 'Nederlandse baksteenrenaissance' ebouwd.
 
