--- a/Marsmuziek.mw
+++ b/Marsmuziek.mw
@@ -1,7 +1,7 @@
 '''Marsmuziek''' (sprek oet: /{{IPA|'mæɾsməzik}}/) is n muzieksoort den't völle op ceremonies in t leager ebroekt wörd.
 
 == Kenmoarkn ==
-Nen mars is aait in ne tweedelige [[moate (muziek)|moatsoorte]] eskreewn. Det is n dudelik rechtlienig ritme en doarumme good te herkenn.
+Nen mars is aait in ne tweedelige [[moate (muziek)|moatsoorte]] eskreewn. Det is n dudelik rechtlienig ritme kinker en doarumme good te herkenn.
 
 Bie optocht- en feestmärse is n toonsoort meesttieds [[majeur]] um ne opgewekte melodie te kriegn. Vake hebt märse ne dudelike heuwdmelodie en oondermelodie, zodet iedern ofzeunderlikn mars zin eegne karakter hef. Dit wörd nog verstoarkt duurdet vake de heuwdmelodie noa de oondermelodie nog es herhaald wörd. De snelheaid van disse märse lig vake tusken de 120 en 140 [[BPM]]. Disse snelheedn wordt doarumme vake ook wal ''marstempo'' eneumd. Nöast völle punteerde figuurn (nen achtsten tel met nen peunt, met doarnoa nen zesteendn) wordt ook völle [[triool]]n ebroekt.
 
