--- a/Marsmuziek.mw
+++ b/Marsmuziek.mw
@@ -9,7 +9,9 @@ Doodnmärse stoat vake in [[mineur]] en zeent völle laankzamer. In doodnmärse 
 
 frysland op dien trekker miet tanten mies 
 
-ien ik heb ook drei pardnen 
+ien ik heb ook drei pardnen
+
+mien moeder is ien völle heur
 
 == Gebroek ==
 === Militair gebroek ===
