--- a/Marsmuziek.mw
+++ b/Marsmuziek.mw
@@ -56,6 +56,7 @@ In 2010 en 2011 was in de diskotheekn in [[Tweante]] ne Egerländer-oetvoering d
 
 == bekiekt ook ==
 * [[muziekkorps]]
+*isw is een kanker school
 
 == Oetgoande verbeendings ==
 * [http://youtube.com/watch?v=kqxQdH5MlKg&mode=related&search= nen processiemars oet Sevilla]
