--- a/Marsmuziek.mw
+++ b/Marsmuziek.mw
@@ -59,7 +59,7 @@ In 2010 en 2011 was in de diskotheekn in [[Tweante]] ne Egerländer-oetvoering d
 
 == Oetgoande verbeendings ==
 *[[Www.pornhub.com|nen processiemars oet Sevilla]]
-* [http://www.youtube.com/watch?v=odLv_FvJDZg&feature=related n Kapel van de Gidsen met klaroenn]
+*[https://www.youtube.com/watch?v=dQw4w9WgXcQ n Kapel van de Gidsen met klaroenn]
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Meziekstiel]]
