--- a/Marsmuziek.mw
+++ b/Marsmuziek.mw
@@ -1,17 +1,11 @@
 '''Marsmuziek''' (sprek oet: /{{IPA|'mæɾsməzik}}/) is n muzieksoort den't völle op ceremonies in t leager ebroekt wörd.
 
 == Kenmoarkn ==
-Nen mars is aait in ne tweedelige [[moate (muziek)|moatsoorte]] eskreewn. Det is n dudelik rechtlienig ritme kinker en doarumme good te herkenn.
+Nen mars is aait in ne tweedelige [[moate (muziek)|moatsoorte]] eskreewn. Det is n dudelik rechtlienig ritme en doarumme good te herkenn.
 
 Bie optocht- en feestmärse is n toonsoort meesttieds [[majeur]] um ne opgewekte melodie te kriegn. Vake hebt märse ne dudelike heuwdmelodie en oondermelodie, zodet iedern ofzeunderlikn mars zin eegne karakter hef. Dit wörd nog verstoarkt duurdet vake de heuwdmelodie noa de oondermelodie nog es herhaald wörd. De snelheaid van disse märse lig vake tusken de 120 en 140 [[BPM]]. Disse snelheedn wordt doarumme vake ook wal ''marstempo'' eneumd. Nöast völle punteerde figuurn (nen achtsten tel met nen peunt, met doarnoa nen zesteendn) wordt ook völle [[triool]]n ebroekt.
 
 Doodnmärse stoat vake in [[mineur]] en zeent völle laankzamer. In doodnmärse wörd zowat aait t punteerde ritme broekt, um de stoatigheaid te verstoarkn. Vake wordt dit soort märse ook op half tempo elop (één trad per twee tel).
-
-frysland op dien trekker miet tanten mies 
-
-ien ik heb ook drei pardnen
-
-mien moeder is ien völle heur
 
 == Gebroek ==
 === Militair gebroek ===
@@ -58,8 +52,8 @@ In 2010 en 2011 was in de diskotheekn in [[Tweante]] ne Egerländer-oetvoering d
 * [[muziekkorps]]
 
 == Oetgoande verbeendings ==
-*[[Www.pornhub.com|nen processiemars oet Sevilla]]
-*[https://www.youtube.com/watch?v=dQw4w9WgXcQ n Kapel van de Gidsen met klaroenn]
+* [http://youtube.com/watch?v=kqxQdH5MlKg&mode=related&search= nen processiemars oet Sevilla]
+* [http://www.youtube.com/watch?v=odLv_FvJDZg&feature=related n Kapel van de Gidsen met klaroenn]
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Meziekstiel]]
