--- a/Marsmuziek.mw
+++ b/Marsmuziek.mw
@@ -6,6 +6,7 @@ Nen mars is aait in ne tweedelige [[moate (muziek)|moatsoorte]] eskreewn. Det is
 Bie optocht- en feestmärse is n toonsoort meesttieds [[majeur]] um ne opgewekte melodie te kriegn. Vake hebt märse ne dudelike heuwdmelodie en oondermelodie, zodet iedern ofzeunderlikn mars zin eegne karakter hef. Dit wörd nog verstoarkt duurdet vake de heuwdmelodie noa de oondermelodie nog es herhaald wörd. De snelheaid van disse märse lig vake tusken de 120 en 140 [[BPM]]. Disse snelheedn wordt doarumme vake ook wal ''marstempo'' eneumd. Nöast völle punteerde figuurn (nen achtsten tel met nen peunt, met doarnoa nen zesteendn) wordt ook völle [[triool]]n ebroekt.
 
 Doodnmärse stoat vake in [[mineur]] en zeent völle laankzamer. In doodnmärse wörd zowat aait t punteerde ritme broekt, um de stoatigheaid te verstoarkn. Vake wordt dit soort märse ook op half tempo elop (één trad per twee tel).
+Poar um
 
 == Gebroek ==
 === Militair gebroek ===
