--- a/Leerdam.mw
+++ b/Leerdam.mw
@@ -2,7 +2,7 @@
 naam = Leerdam |
 bestaandsnaam vlagge = Leerdam flag.svg |
 bestaandsnaam woapn = Leerdam wapen.svg |
-lokatie = LocatieGoedereede |
+lokatie = LocatieLeerdam |
 proveensie = [[Utrecht (provinsie)|Utrecht]] |
 heufdplaats = '''Leerdam''' |
 öppervlakte = 34,32 |
