*Empty MediaWiki Message*

--- a/Demokratiese_Republiek_van_de_Kongo.mw
+++ b/Demokratiese_Republiek_van_de_Kongo.mw
@@ -30,7 +30,7 @@ De '''Demokratiese Republiek van de Kongo''' ([[Fraans]]k: ''République démocr
 
 De [[Kongolesen Börgeroorlog|Kongolese börgeroorleuge]], dee as in [[1996]] oetbreuken, warren et eande van [[Mobutu Sese Seko]]'s 31-joarige regearingstermien. Et verweusten et laand. Op zin meest warren der negen Afrikaanse laanden bie betrökken, meardere vreadestroepen van de [[Verenigde Nasies|VN]] en twentig vechtersgroepen<ref>[http://www.csmonitor.com/2004/0623/p01s04-woaf.html McLaughlin, Abraham, Woodside, Duncan. "Rumblings of war in heart of Africa". The Christian Science Monitor. 23 June 2004]</ref>. 5,4 miljoen leu kömmen doarbie oet de tied.<ref>[http://www.rescue.org/sites/default/files/resource-file/2006-7_congoMortalitySurvey.pdf Coghlan, Benjamin. "Mortality in the Democratic Republic of Congo: An ongoing crisis: Full 26-page report". 2007. p 27.] (PDF).</ref><ref>[http://content.time.com/time/magazine/article/0,9171,1198921,00.html Robinson, Simon. "The deadliest war in the world".Time. 28 mei 2006.] bekekken op 2 mei 2010</ref>
 
-In de Demokratiese Republiek van de Kongo gef et grote vuurroaden natuurlike groondstoffen. Mer duur zwakke politieke groondbeginselen, een slecht weagennet, deepgoande [[umkeuperieje]] en eeuwenlange kommersjele en koloniale oetbuiting is et laand neet best ontwikkeld. Nöast de heuwdstad, [[Kinsjasa]], zeent de twee aandere grote steaden [[Loemoembasji]] en [[Mboedji-Maji]] heuwdzakelik mienbouwgemeenskoppen. DE DRK voort et meeste roewe mineralen oet, woervan as 50% noar [[Volksrepubliek Sjina|Sjina]] geet. Volgens de [[Meanskelike Oontwikkelings Index]] (HDI) steet de DRK op nommer 167 van de oontwikkelingslieste van 188 laanden.<ref>[http://hdr.undp.org/sites/default/files/hdr_2015_statistical_annex.pdf 2015 United Nations Development Programme. Human Development Report. 2015. Bekekken op 14 december 2015.</ref>
+In de Demokratiese Republiek van de Kongo gef et grote vuurroaden natuurlike groondstoffen. Mer duur zwakke politieke groondbeginselen, een slecht weagennet, deepgoande [[umkeuperieje]] en eeuwenlange kommersjele en koloniale oetbuiting is et laand neet best ontwikkeld. Nöast de heuwdstad, [[Kinsjasa]], zeent de twee aandere grote steaden [[Loemoembasji]] en [[Mboedji-Maji]] heuwdzakelik mienbouwgemeenskoppen. DE DRK voort et meeste roewe mineralen oet, woervan as 50% noar [[Volksrepubliek Sjina|Sjina]] geet. Volgens de [[Meanskelike Oontwikkelings Index]] (HDI) steet de DRK op nommer 167 van de oontwikkelingslieste van 188 laanden.<ref>[http://hdr.undp.org/sites/default/files/hdr_2015_statistical_annex.pdf 2015 United Nations Development Programme. Human Development Report. 2015]. Bekekken op 14 december 2015.</ref>
 
 ==Naam==
 De Demokratiese Republiek van de Kongo heten eerst, in volgorde van geskiedenis, [[Vriestoat Kongo]], [[Belgies Kongo]], [[Republiek van de Kongo (Léopoldville)]], Demokratiese Republiek van de Kongo de [[Republiek Zaïre]] en toen wier de Demokratiese Republiek van de Kongo.
