*Empty MediaWiki Message*

--- a/Kongo-Brazzaville.mw
+++ b/Kongo-Brazzaville.mw
@@ -55,7 +55,7 @@ Oonder de groondwet van [[1963]] wör Massamba-Débat vuur vief joar as presidea
 [[Bestaand:Sassou-Nguesso.jpg|thumb|right|200px|Denis Sassoe Ngwesso, den hudigen presideant van Kongo-Brazzaville]]
 Sassoe Ngwesso haalden baanden an met et [[Oostblok]] en oonderskrewen ne vreandskopsverkloaring van 20 joar met den Sovjet-Unie. De volgende joaren mos hee verdan mear lönnen op [[politieke oonderdrukking]] van tegenstaanders as op bevuurrechten van medestaanders, um zinne [[diktatuur]] vaste te hoolden.<ref>Encyclopedia of African history. Shillington, Kevin. CRC Press, 2005. ISBN 1579582451. p 302|</ref>
 
-[[Pascal Lissoeba]], den as den eersten verkeuzen presideant van Kongo was tusken [[1992]] en [[1997]], wol de [[ekonomie]] vriejer maken met hulpe van et [[IMF]]. In [[juni]] [[1996]] zatten et IMF de haandtekening oonder een dreejoarig plan vuur groondige verbettering en steund op et peunt um ne joarlikse oawereenkomst an te goan, toen as der nen börgeroorlog oetbreuk op de helfte van 1997.<ref>[http://store.eiu.com/Product.aspx?pid=50000205&gid=1310000331&sid=735820073 The Economist Intelligence Unit. Country Report Congo-Brazzaville. 2003. p 24.</ref>
+[[Pascal Lissoeba]], den as den eersten verkeuzen presideant van Kongo was tusken [[1992]] en [[1997]], wol de [[ekonomie]] vriejer maken met hulpe van et [[IMF]]. In [[juni]] [[1996]] zatten et IMF de haandtekening oonder een dreejoarig plan vuur groondige verbettering en steund op et peunt um ne joarlikse oawereenkomst an te goan, toen as der nen börgeroorlog oetbreuk op de helfte van 1997.<ref>[http://store.eiu.com/Product.aspx?pid=50000205&gid=1310000331&sid=735820073 The Economist Intelligence Unit. Country Report Congo-Brazzaville]. 2003. p 24.</ref>
 
 De demokratiese oontwikkeling van Kongo leup van et spoer toen as Lissoeba en Sassoe nen machtstried angungen in de [[Börgeroorlog van de Kongo-Reppubliek]]. Spanningen leupen op toen as de verkiezingen der ankömmen. Op [[5 juni]] umsingelden stoatssoldoaten van Lissoeba et kaamp van Sassoe in Brazzaville. Sassoe bevöl zinne "kobra's" (zinne knokploge) um tegenstaand te beden. Der ontsteund nen stried wat veer moand doeren zol en völle van Brazzaville kapot maken. Doarnöast kosten et nog es tiendoezenden börgers et leawen. Vrog in oktober kreeg Sassoe hulpe van et sosjalistiese regime van [[Angola]]. Mid-oktober völ de regearing van Lissoeba en reup Sassoe zik oet as presideant.
 
