*Empty MediaWiki Message*

--- a/Montenegro.mw
+++ b/Montenegro.mw
@@ -169,7 +169,7 @@ Umdet Montenegro zo slim haank op rechtstreekse investeringen van boetenof, is e
 
 [[Bestaand:Republic-of-Montenegro-UN-16.png|350px|thumb|left|Weagenkaarte van Montenegro]]
 
-In [[2007]] haalden et deenstendeel 72,4% van et BBP binnen, terwiel as de industrie 17,6% en de boeren 10% binnenhaalden.<ref>[http://devdata.worldbank.org/AAG/mne_aag.pdf Montenegro in enen oogopslag</ref> Der zeent 50.000 boerenfamilies dee as vuur zikzelf boert.<ref>[http://www.balkaninsight.com/en/article/agriculture-imposes-new-challenges-for-montenegro Milena Milosevic - EU Farming Standards Pose Test For Montenegro. Balkan Insight. Skrewen op 7 dezember 2012.</ref>
+In [[2007]] haalden et deenstendeel 72,4% van et BBP binnen, terwiel as de industrie 17,6% en de boeren 10% binnenhaalden.<ref>[http://devdata.worldbank.org/AAG/mne_aag.pdf Montenegro in enen oogopslag]</ref> Der zeent 50.000 boerenfamilies dee as vuur zikzelf boert.<ref>[http://www.balkaninsight.com/en/article/agriculture-imposes-new-challenges-for-montenegro Milena Milosevic - EU Farming Standards Pose Test For Montenegro. Balkan Insight. Skrewen op 7 dezember 2012.</ref>
 
 De [[aluminium]]- en [[stoal]]fabrieken en laandbouwverwoarking maakt et grötste deel van de industrie oet. Wiedters lönt de Montenegriense ekonomie slim op [[toerisme]]. In [[2014]] kömmen der ongevear 1,54 miljoen toeristen, dee as bie mekoar € 730 miljoen in de stoatskas brachten.<ref>[http://www.balkaninsight.com/en/article/montenegro-sees-increase-in-tourists-numbers Balkaninsight.com. Montenegro sees increase in tourists numbers. Skrewen op 25 februwoari 2015. Bekekken op 31 juli 2015.</ref> De Montenegrienen zeet toerisme as et belangriekste vuur gröai in de tookomst. Doarumme spandeert de regearing ook et meeste an verbetteringen an et weagennet en de bereikboarhead.
 
